web/htdocs/themes/facelift/scss/_pages.scss
/* ... */
input[type=text], textarea {
  position: relative;
}

input[type=text], input[type=password] {
  vertical-align: middle;
}

input[type=password] {
  box-shadow: 0.1px 1.2px 1.8px 0 #800 inset;
}

select {
  vertical-align: middle;
}

input[type=radio],
input[type=checkbox] {
  margin-left: 0;
}

input, select, textarea, div.snapin select, div.snapin textarea,
#mk_side_search_field {
  &.number {
    text-align: left;
  }

  &.button {
    display: inline-block;
    width: auto;
    margin-top: 8px;
    margin-right: 8px;
    margin-bottom: 8px;
    margin-left: 0;
    font-size: $theme-font-size-main;
    letter-spacing: $theme-letter-spacing-table;
    color: #fff;
    background-color: #13d389;
    box-shadow: none;
  }

  &[type=radio] {
    width: auto;
    margin-bottom: 0;
  }
}

input.button {
  &:not([type=text]), &:not([type=password]) {
    padding: 4px 8px;
    border: 1px solid #13d389;

    &:hover, &:active {
      border: 1px solid #11bd7b;
    }
  }
}

input, select, textarea, #mk_side_search_field {
  &.button:hover, &.button:active {
    background-color: #11bd7b;
  }
}

select, textarea, div.snapin select, div.snapin textarea,
#mk_side_search_field {
  &.toggle_timespecific_parameter {
    display: block;
  }
}

input.toggle_timespecific_parameter {
  margin-top: 5px;
}

/* TODO: Reproduce this html element */
td.content hr {
  height: 1px;
  background-color: rgba(255, 255, 255, 0.2);
  border-style: none;
}

/* TODO: Reproduce these html elements (also have a look at .tab and .tabactive
 *       elemenets in _logwatch.scss)
 */
input.tab#results, input.tabactive#results { background-color: #fe6; }
input.date, input.time {
  font-family: monospace;
}

/* TODO: Reproduce .inputerror elements */
.inputerror {
  input, select, textarea, div.snapin select, div.snapin & select,
  div.snapin textarea, div.snapin & textarea, #mk_side_search_field,
  span.checkbox, > select {
    background-color: $theme-color-nuance-15;
  }

  span.checkbox {
    display: block;
    float: left;
    height: 17px;
    margin-right: 2px;

    input {
      margin: 1px;
    }
  }
}

span.checkbox {
  line-height: 14px;
  white-space: nowrap;
}

.checkbox label::before {
  border: 1px solid $theme-color-table-border-dark;
  border-radius: 2px;
  box-shadow: none;
}

/* Next-Generation forms */
table.nform {
  width: 100%;
  padding: 0;
  margin: 5px 0;
  background: $theme-color-white;
  border: 1px solid $theme-color-table-border;
  border-spacing: 7px 5px;
  border-radius: $theme-border-radius;
  box-shadow: 0 0 0 rgba(0, 0, 0, 0.1);
  empty-cells: show;

  body.main.screenshotmode & {
    background-color: #fff;
    background-image: none;
  }

  tr.closed {
    display: none;
  }

  tr.heading {
    height: auto;
    background: $theme-color-white;

    > td {
      vertical-align: middle;
      cursor: pointer;
      background-color: rgba(255, 255, 255, 0.2);
      border-radius: 5px 5px 0 0;
    }

    td {
      height: auto;
      padding: 3px 4px 0 ;
      font-size: $theme-font-size-global;
      letter-spacing: $theme-letter-spacing-table;
      color: $theme-color-table-text;
      text-transform: uppercase;
    }

    img.treeangle.nform {
      margin: 0 8px 0 0;
      filter: invert(100%);
    }
  }

  > tbody > tr td {
    color: #000;
  }

  > tbody > tr > td {
    vertical-align: middle;

    &.simple {
      line-height: 20px;
    }
  }

  tr.open td.legend {
    width: 320px;
    min-width: 320px;
    padding-right: 8px;
    padding-left: 10px;
    overflow: hidden;
    line-height: 28px;
    text-align: left;
    word-wrap: break-word;
    vertical-align: baseline;

    div.title {
      float: left;
      max-width: 278px;
      padding: 0 8px 0 0;
      overflow: hidden;
      font-weight: $theme-font-weight-bold;
      white-space: nowrap;

      .dots {
        opacity: .2;
      }

      &.withcheckbox {
        max-width: 278px;
        margin: 5px 6px 5px 0;
      }
    }

    div.checkbox {
      float: left;
      margin-top: 3px;
      margin-left: 6px;
    }
  }

  td.legend.simple {
    padding-top: 5px;
  }

  &.narrow td.legend {
    height: 18px;
  }

  .dots {
    margin-left: 5px;
    color: #444;
  }

  td.content {
    padding-right: 10px;
    padding-left: 10px;

    &.simple {
      padding-bottom: 0;
    }
  }

  &.narrow td.content {
    height: 18px;
    padding-bottom: 2px;
  }

  tr.top {
    height: 0; /* deflate vert space after heading */

    td {
      height: 0; /* deflate top vert space */
    }
  }

  tr.bottom td {
    height: 0; /* deflate bottom vert space */
  }

  td.reason {
    padding: 8px 4px;
  }

  input, select, textarea, #mk_side_search_field {
    & {
      margin: 0;
    }

    &.button {
      margin: 0 5px 0 0;
    }
  }

  hr {
    margin: 8px 0;
    background-color: #e5e5e5;
  }

  .ruleset {
    margin-bottom: 8px;
  }

  tr.open td.content .checkbox {
    display: inline-block;
    margin-right: 8px;
    margin-left: 4px;
  }

  .listchoice td {
    height: 24px;
    vertical-align: middle;
  }

  .title {
    color: $theme-color-text;
  }

  #view_p_options_tbl {
    border-spacing: 4px;
  }
}
/* ... */

